--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 	
 	
 		<div id = "image-card">
+		
 			<div class="project">
 			<a id = "profile-link"  href="http://bondcalculate.herokuapp.com/"  target="_blank"  class="project project-tile"> 
 			<img id="prj-images" src="https://cdn130.picsart.com/315286581107201.png?r1024x1024"/>
@@ -101,7 +102,7 @@
 			
 			<p class="project-title">
 				<span class="code">&lt;</span>
-				Survey Form Web App
+				Survey Form Web App<br>
 				<span class="code">&#47;&gt;</span>
 			  </p>	
 			  </a>
@@ -132,7 +133,7 @@
 			</div>
 			
 			<div class="project">
-			
+		 
 			<a id = "profile-link" href="https://sl1nd0.github.io/mandela_tribute/"  target="_blank"> 
 			<img id="prj-images" src="https://cdn130.picsart.com/315286589136201.png?r1024x1024"/>
 			
@@ -145,6 +146,7 @@
 			</div>
 			
 			<div class="project">
+			<br>
 			<a id = "profile-link" href="https://sl1nd0.github.io/arduinosite/"  target="_blank"> 
 			<img id="prj-images" src="https://cdn130.picsart.com/315286559328201.png?r1024x1024"/>
 			
